# sc2clone

./: CMakeLists.txt  Makefile  README.md  main.cpp  math_util.cpp  math_util.h  observable.h  test.cpp  test2.cpp
graphics/: constants.h  draw.cpp  draw.h  draw_image.cpp  draw_image.h  draw_model.cpp  draw_model.h  draw_model_textured.cpp  draw_model_textured.h  draw_square.cpp  draw_square.h  draw_text.cpp  draw_text.h  gl_config.h  load_obj.cpp  load_obj.h  shader.cpp  shader_util.cpp  shader_util.h  texture.cpp  texture_load.cpp  texture_load.h  window.cpp  window.h
logic/: Game.cpp  Game.h  GameCommands.cpp  Parsing.h  SelectMath.cpp  SelectMath.h  UniqueID.h  World.cpp  World.h
main_testers/: dragon_curve.cpp
physics/: Box.cpp  Box.h  Convex.h  MovingBox.cpp  MovingBox.h  Primitives.h  Resolution.cpp  Resolution.h  RigidBody.h  RotatedBox.cpp  RotatedBox.h  Simulation.cpp  Simulation.h
res/: dependencies.txt  plane.blend
res/shaders/: text_f.glsl  texture3d_f.glsl
server/: Packet.cpp  Server.cpp  Server.h  ServerCommands.cpp  ServerMain.cpp  ServerNetworking.cpp  ServerNetworking.h  WorldServer.h  async_console.cpp  async_console.h  listen.cpp  listen.h  packet.cpp  packet.h  response.cpp  response.h  server.cpp  server_main.cpp  shared.h  socket_init.h
src/: main.cpp
src/resources/: export.cpp  import.cpp  import.h
test/: Chatbox.cpp  Chatbox.h  DragCamera.cpp  DragCamera.h  DragonCurve.cpp  DragonCurve.h  FlyCamera.cpp  FlyCamera.h  OverheadCamera.cpp  OverheadCamera.h
user_interface/: Chatbox.cpp  Chatbox.h  FlyCamera.cpp  FlyCamera.h  FocusMode.cpp  FocusMode.h  OverheadCamera.cpp  OverheadCamera.h
